v10.3.0/_sources/generated/pcdsdevices.piezo.SliceDhv.rst.txt
pcdsdevices.piezo.SliceDhv
==========================

.. currentmodule:: pcdsdevices.piezo

.. autoclass:: SliceDhv

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - channel_1
          - :class:`~pcdsdevices.piezo.SliceDhvChannel`
          - ``:CH1``
          - 
          - normal
          - 
    
        * - channel_2
          - :class:`~pcdsdevices.piezo.SliceDhvChannel`
          - ``:CH2``
          - 
          - normal
          - 
    
        * - controller
          - :class:`~pcdsdevices.piezo.SliceDhvController`
          - 
          - 
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: subscriptions
    
    